brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_parameter_expansion_default_nested_quotes.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: ": \"${VAR:-\"default value\"}\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: ":",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "\"${VAR:-\"default value\"}\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
