brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_pattern_matching_negative_extglob.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "shopt -s extglob\ncase \"hello\" in\n  !(*.txt)) echo \"not a txt file\";;\n  *) echo \"txt file\";;\nesac",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "shopt",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-s",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "extglob",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(CaseClause(CaseClauseCommand(
                value: Word(
                  value: "\"hello\"",
                  loc: "[location]",
                ),
                cases: [
                  CaseItem(
                    patterns: [
                      Word(
                        value: "!(*.txt)",
                        loc: "[location]",
                      ),
                    ],
                    cmd: Some(CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "echo",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "\"not a txt file\"",
                                  loc: "[location]",
                                )),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ])),
                    post_action: ExitCase,
                    loc: "[location]",
                  ),
                  CaseItem(
                    patterns: [
                      Word(
                        value: "*",
                        loc: "[location]",
                      ),
                    ],
                    cmd: Some(CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "echo",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "\"txt file\"",
                                  loc: "[location]",
                                )),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ])),
                    post_action: ExitCase,
                    loc: "[location]",
                  ),
                ],
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
